# ta

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: default.frag  default.vert
code/: CMakeLists.txt
code/include/: engine.hpp
code/include/core/: device.hpp  fileio.hpp
code/include/platform/: device.hpp  window.hpp
code/include/platform/opengl/: device_gl.hpp  opengl.hpp  opengl_gl.hpp  shader_gl.hpp
code/include/platform/vulkan/: descriptors_vk.hpp  device_vk.hpp  images_vk.hpp  initializers_vk.hpp  pipelines_vk.hpp  types_vk.hpp  vk_descriptors.hpp  vk_images.hpp  vk_initializers.hpp  vk_pipelines.hpp
code/include/rendering/: shader.hpp  shader_gl.hpp
code/include/utility/: console.hpp
code/source/: engine.cpp
code/source/core/: device.cpp  fileio.cpp
code/source/platform/: device.cpp
code/source/platform/opengl/: device_gl.cpp  opengl.cpp  opengl_gl.cpp  shader_gl.cpp
code/source/platform/vulkan/: descriptors_vk.cpp  device_vk.cpp  images_vk.cpp  loader_vk.cpp  pipelines_vk.cpp  vk_descriptors.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
code/source/rendering/: shader.cpp
code/source/utility/: console.cpp
engine/: CMakeLists.txt
